--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,97 @@
 ---
-
+import "../styles/style.css";
 ---
 
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>Based SMP</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		 <div class="hide-on-small-screen based-smp-acronym-box">
+      <b><u>Based SMP</u></b>
+      <p>
+        <b>B</b>. <span id="name1">Enable</span>
+        <br />
+        <b>A</b>. <span id="name2">JavaScript</span>
+        <br />
+        <b>S</b>. <span id="name3">Or</span>
+        <br />
+        <b>E</b>. <span id="name4">Ur</span>
+        <br />
+        <b>D</b>. <span id="name5">Gay</span>
+        <br />
+        <sup style="float: right">(smp)</sup>
+      </p>
+    </div>
+
+    <header>
+      <h2><u>The Based SMP</u></h2>
+    </header>
+
+    <p>IP: based-smp.duckdns.org</p>
+
+    <main>
+      <br />
+      <div>
+        <b>Rules:</b>
+        <ul>
+          <li>
+            You cannot grief structures unless you have permission, own it, or
+            otherwise know that the owners won't care if it gets destroyed.
+          </li>
+          <li>
+            Every exploit is allowed, as long as you aren't trying to lag the
+            server or crash other players (unless it's a joke, and you stop when
+            asked).
+          </li>
+          <li>
+            No hacking. (Using mods/hacked clients to do stuff that isn't
+            supposed to happen)
+          </li>
+        </ul>
+      </div>
+
+      <p>
+        <b>The Based SMP Discord:</b>
+        <br />
+        <a href="https://discord.gg/3Kdu2AUxVR">
+          https://discord.com/invite/3Kdu2AUxVR
+        </a>
+      </p>
+
+      <p>
+        <b>SMP start:</b>
+        <br />
+        <span id="countdown">Sun Dec 01 2024, 00:00:00 UTC.</span>
+        <noscript>
+          <br />
+          <sup>Turn on JavaScript for cool countdown.</sup>
+        </noscript>
+      </p>
+    </main>
+
+    <div class="hide-on-small-screen" style="float: right">
+      <img
+        src="icon.webp"
+        alt="Server icon"
+        width="400"
+        height="400"
+      />
+      <br />
+      <span>
+        <span style="text-align: end; font-size: 8px">
+          *may not be the actual name of the SMP
+        </span>
+        <span style="float: right">Icon and name by Blubby</span>
+      </span>
+      <hr />
+    </div>
+
+    <script src="../scripts/serverAcronym.js"></script>
+    <script src="../scripts/timeToServerLaunch.js"></script>
 	</body>
 </html>
