--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -66,11 +66,12 @@ import "../styles/style.css";
       <p>
         <b>SMP start:</b>
         <br />
-        <span id="countdown">Sun Dec 01 2024, 00:00:00 UTC.</span>
+        <!-- <span id="countdown">Sun Dec 01 2024, 00:00:00 UTC.</span>
         <noscript>
           <br />
           <sup>Turn on JavaScript for cool countdown.</sup>
-        </noscript>
+        </noscript> -->
+        The SMP should start around January 1st 2025.
       </p>
     </main>
 
