fix: accronym not showing

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -93,6 +93,6 @@ import "../styles/style.css";
     </div>
 
     <script src="../scripts/serverAcronym.js"></script>
-    <script src="../scripts/timeToServerLaunch.js"></script>
+    <!-- <script src="../scripts/timeToServerLaunch.js"></script> -->
 	</body>
 </html>
