Re-add server start countdown and update start time

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -66,12 +66,11 @@ import "../styles/style.css";
       <p>
         <b>SMP start:</b>
         <br />
-        <!-- <span id="countdown">Sun Dec 01 2024, 00:00:00 UTC.</span>
+        <span id="countdown">Sun Dec 01 2024, 00:00:00 UTC.</span>
         <noscript>
           <br />
           <sup>Turn on JavaScript for cool countdown.</sup>
-        </noscript> -->
-        The SMP should start around January 1st 2025.
+        </noscript>
       </p>
     </main>
 
@@ -93,6 +92,6 @@ import "../styles/style.css";
     </div>
 
     <script src="../scripts/serverAcronym.js"></script>
-    <!-- <script src="../scripts/timeToServerLaunch.js"></script> -->
+    <script src="../scripts/timeToServerLaunch.js"></script>
 	</body>
 </html>
