--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro'
+import BaseLayout from '../layouts/BaseLayout.astro';
 ---
 
 <BaseLayout title="Based SMP">
@@ -58,7 +58,7 @@ import BaseLayout from '../layouts/BaseLayout.astro'
     <p>
       <b>SMP start:</b>
       <br />
-      <span id="countdown">Sun Dec 01 2024, 00:00:00 UTC.</span>
+      <span id="countdown">Sat Jan 18 2025, 14:00:00 UTC.</span>
       <noscript>
         <br />
         <sup>Turn on JavaScript for cool countdown.</sup>
