feat: add modpack download to site

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,6 +56,19 @@ import BaseLayout from '../layouts/BaseLayout.astro';
     </p>
 
     <p>
+      <b>Modpack:</b>
+      <br />
+      <a href="https://modrinth.com/modpack/based-smp-modpack"
+        >based smp modpack download</a
+      >
+      <br />
+      <sup>
+        If you have any trouble installing the modpack, please ask Cuboid for
+        help.
+      </sup>
+    </p>
+
+    <p>
       <b>SMP start:</b>
       <br />
       <span id="countdown">Sat Jan 18 2025, 14:00:00 UTC.</span>
