update minecraft server rules

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,16 +33,17 @@ import BaseLayout from '../layouts/BaseLayout.astro';
       <ul>
         <li>
           You cannot grief structures unless you have permission, own it, or
-          otherwise know that the owners won't care if it gets destroyed.
+          otherwise know that the owners won't care if it gets destroyed. (If
+          they do, that's your fault)
+        </li>
+        <li>No intentionally lagging the server or crashing other players.</li>
+        <li>
+          No dupicating items, gravity block dupication, such as TNT duping is
+          fine.
         </li>
         <li>
-          Every exploit is allowed, as long as you aren't trying to lag the
-          server or crash other players (unless it's a joke, and you stop when
-          asked).
-        </li>
-        <li>
-          No hacking. (Using mods/hacked clients to do stuff that isn't supposed
-          to happen)
+          No hacking. Mods such as FullBright, that aren't usually considered to
+          be 'hacking' are fine.
         </li>
       </ul>
     </div>
