style: format code

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,5 +1,5 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro'
+import BaseLayout from '../layouts/BaseLayout.astro';
 ---
 
 <BaseLayout>
@@ -12,6 +12,6 @@ import BaseLayout from '../layouts/BaseLayout.astro'
   }
 
   a {
-    color: #0000EE;
+    color: #0000ee;
   }
 </style>
