--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,8 +38,8 @@ import BaseLayout from '../layouts/BaseLayout.astro';
         </li>
         <li>No intentionally lagging the server or crashing other players.</li>
         <li>
-          No dupicating items, gravity block dupication, such as TNT duping is
-          fine.
+          No dupicating items. (Gravity block dupication, such as TNT duping is
+          fine)
         </li>
         <li>
           No hacking. Mods such as FullBright, that aren't usually considered to
@@ -69,18 +69,19 @@ import BaseLayout from '../layouts/BaseLayout.astro';
       </sup>
     </p>
 
-  <div class="hide-on-small-screen" style="float: right">
-    <img src="icon.webp" alt="Server icon" width="400" height="400" />
-    <br />
-    <span>
-      <span style="text-align: end; font-size: 8px">
-        *may not be the actual name of the SMP
+    <div class="hide-on-small-screen" style="float: right">
+      <img src="icon.webp" alt="Server icon" width="400" height="400" />
+      <br />
+      <span>
+        <span style="text-align: end; font-size: 8px">
+          *may not be the actual name of the SMP
+        </span>
+        <span style="float: right">Icon and name by Blubby</span>
       </span>
-      <span style="float: right">Icon and name by Blubby</span>
-    </span>
-    <hr />
-  </div>
+      <hr />
+    </div>
 
-  <script src="../scripts/serverAcronym.js"></script>
-  <script src="../scripts/timeToServerLaunch.js"></script>
+    <script src="../scripts/serverAcronym.js"></script>
+    <script src="../scripts/timeToServerLaunch.js"></script>
+  </main>
 </BaseLayout>
