fix spelling errors

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,7 +38,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
         </li>
         <li>No intentionally lagging the server or crashing other players.</li>
         <li>
-          No dupicating items. (Gravity block dupication, such as TNT duping is
+          No duplicating items. (Gravity block duplication, such as TNT duping is
           fine)
         </li>
         <li>
