add comment linking to source code to baseLayout

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -5,6 +5,10 @@ const { title } = Astro.props;
 ---
 
 <html lang="en">
+  <!--
+    Haii, if you're trying to figure out how this website works, here's a link to the site's source code
+    https://github.com/The-Based-SMP/the-based-smp.github.io
+  -->
   <head>
     <meta charset="utf-8" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
