add server status and player count

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
   </div>
 
   <header>
-    <h2><u>The Based SMP</u></h2>
+    <h2><u>The Based SMP</u><span id="player-count" class="hide-on-small-screen"></span></h2>
   </header>
 
   <p>IP: based-smp.duckdns.org</p>
@@ -91,4 +91,5 @@ import BaseLayout from '../layouts/BaseLayout.astro';
   </style>
 
   <script src="../scripts/serverAcronym.js"></script>
+  <script src="../scripts/serverInfo.js"></script>
 </BaseLayout>
